--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -12,7 +12,8 @@
   </p>
   <img src="../images/sample.jpg" alt="サッカーボール">
   <a href="https://x.com/samuraijuku">
-    <br>私のプロフィールはこちら<br/>
+    私のプロフィールはこちら
   </a>
 </body>  
+
 </html>
