--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -12,8 +12,7 @@
   </p>
   <img src="../images/sample.jpg" alt="サッカーボール">
   <a href="https://x.com/samuraijuku">
-    私のプロフィールはこちら
-  </a>
+    私のプロフィールはこちら </a>
 </body>  
-
 </html>
+
