--- a/kadai_008/kadai_8.html
+++ b/kadai_008/kadai_8.html
@@ -9,7 +9,7 @@
   <header>
     <h1>SAMURAIニュース</h1>
     <nav>
-      <a href="layout.html">ホーム</a>
+      <a href="https://www.sejuku.net/">ホーム</a>
       <a href="https://www.sejuku.net/">社会</a>
       <a href="https://www.sejuku.net/">経済</a>
       <a href="https://www.sejuku.net/">スポーツ</a>
@@ -23,8 +23,8 @@
         <h3>和菓子店も「トリックオアトリート！」</h3>
         <p>日本でも年々人気の高まるハロウィン。</p>
         <p>今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
-      </section>
 <audio src="ichi.mp3" controls></audio>
+      </section>
       <section>   
         <h3>私のおすすめ和菓子アンケートフォーム</h3>
         <form>
@@ -42,9 +42,9 @@
         <br>
         <label>男性</label><input type="radio" name="gender">
         <label>女性</label><input type="radio" name="gender">
-        <lanel>その他</lanel><input type="radio" name="gender">
+        <lavel>その他</lavel><input type="radio" name="gender">
         <br>
-        <label>おすすめの和菓子の名称</label><input type="text"placeholder="例：みたらし団子">
+        <label>おすすめ和菓子の名称</label><input type="text"placeholder="例：みたらし団子">
         <br>
         <label>おすすめする理由</label>
         <textarea></textarea>
@@ -55,7 +55,7 @@
         <br>
 
         <input type="submit" value="送信">
-        <input type="reset" value="リセット"
+        <input type="reset" value="リセット">
       
         </form>
       </section>
@@ -65,7 +65,7 @@
        <section>
         <h3>SAMURAIが新しい動画をリリース</h3>
         <p>SAMURAI公式YouTubeで新しい動画がリリースされました。</hp>
-        <p>動画内容はHTML/CSSの解説です。</p>
+        <p>動画の内容はHTML/CSSの解説です。</p>
        </section> 
       </article> 
   </main>
@@ -74,4 +74,5 @@
 　</footer>
   </header>
 </body>
+
 </html>
